# hypercube_gol

./: Cargo.toml  README.md  good_cmds.txt
src/: main.rs
