[package]
name = "hypercube_gol"
version = "0.1.0"
edition = "2021"

[features]
vr = ["idek/openxr"]

[profile.release]
debug = true

[dependencies]
anyhow = "1"
idek = { git = "https://github.com/Masterchef365/idek.git", rev = "6a5678f" }
rand = { version = "0.8", features = ["small_rng"] }
structopt = { version = "0.3", default-features = false }
tinyvec = "1.5.1"